# Laserfarm

./: .readthedocs.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tutorial.ipynb  workflow.ipynb
data_processing/: data_processing.json  data_processing.py  data_processing_0.json  data_processing_1.json  example_macro_data_processing.py  example_macro_retiler.py  macro_pipeline.py  pipeline.py  retile_core.py  retiling_config_0.json  retiling_config_1.json  utils.py
docs/: api.rst  conf.py  index.rst  user_manual.rst
examples/: data_processing.json  example_macro_classification.py  example_macro_data_processing.py  example_macro_geotiff_writer.py  example_macro_geotiff_writing.py  example_macro_geotiff_writting.py  example_macro_retiler.py  example_pwf.json  example_webdav_option_file.json  retiling_config.json
feature_extraction/: README.md  ahn3_2019_01_08_1x1m_100m_filt_config.conf  ahn3_2019_01_08_1x1m_100m_nofilt_config.conf  ahn3_2019_01_08_1x1m_filt_config.conf  ahn3_2019_01_08_1x1m_nofilt_config.conf  ahn3_current_retiled_LAZ_joined_all_10m_1m_config.conf  ahn3_current_retiled_LAZ_joined_veg_10m_1m_config.conf  ahn3_current_retiled_LAZ_joined_veglt3m_10m_1m_config.conf  ahn3_update20191104_p1_veg_10m_1m_config.conf  conf_point_env_paper.conf  extract_features_target_cells.py  extract_features_target_cells_v2.py  extract_features_target_cells_v2_lt3.py  extract_features_target_cells_v2_lt3.py~  extract_features_target_cells_v3_ground.py  extract_features_target_cells_v3_veg.py  feature_extraction_populate_VMS.sh  run_feature_extraction_on_VM.sh  (+3 more)
laserfarm/: __init__.py  (+11 more)
(+132 files in other folders)
